@@ -14,6 +14,9 @@ subunit release notes
 
   API CHANGES:
 
+    * When a time: directive is encountered in a subunit stream, the python
+      bindings now call the ``time(seconds)`` method on ``TestResult``.
+
   INTERNALS:
 
     * ExecTestCase supports passing arguments to test scripts.
